--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="col-md-5 d-flex align-items-center justify-content-center">
                 <div class="card bg-info text-white w-100 h-100">
                     <div class="card-body d-flex flex-column align-items-center justify-content-center">
-                        <h3 class="card-title text-success">Create a</h3>
+                        <h3 class="card-title text-success"></h3>
                        
                         
                     </div>
