--- a/resume.html
+++ b/resume.html
@@ -287,7 +287,7 @@
                 console.log('Form submitted:', data);
     
                 // Redirect to another page after submission
-                window.location.href = "hlo.html"; // Change to your desired page
+                window.location.href = "hey.html"; // Change to your desired page
             });
         });
     </script>
