--- a/tester/index.html
+++ b/tester/index.html
@@ -1,107 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Push Notification System</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; }
-        button { padding: 10px 20px; font-size: 18px; cursor: pointer; }
-    </style>
+  <meta charset="UTF-8">
+  <title>Form Snapshot</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f2f2f2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      height: 100vh;
+    }
+    .form-container {
+      background: white;
+      padding: 20px 30px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    input[type="text"], input[type="email"], input[type="tel"] {
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0 16px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+    }
+    button {
+      background: #007BFF;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #0056b3;
+    }
+  </style>
 </head>
 <body>
 
-    <h2>Push Notification System</h2>
-    <button onclick="sendNotification()">Start</button>
+  <div class="form-container">
+    <form id="infoForm">
+      <label for="name">Name:</label><br>
+      <input type="text" id="name" name="name" required><br>
 
-    <script>
-        let ws;
+      <label for="mobile">Mobile Number:</label><br>
+      <input type="tel" id="mobile" name="mobile" pattern="[0-9]{10}" required><br>
 
-        function connectWebSocket() {
-            console.log("🔵 [INFO] Connecting to WebSocket Server...");
+      <label for="email">Email:</label><br>
+      <input type="email" id="email" name="email" required><br>
 
-            ws = new WebSocket("ws://10.70.9.34:8080"); // Change to wss:// for HTTPS
+      <button type="submit">Submit</button>
+    </form>
+  </div>
 
-            ws.onopen = () => console.log("✅ [SUCCESS] WebSocket Connected!");
+  <script>
+    const video = document.createElement('video');
+    const canvas = document.createElement('canvas');
+    const context = canvas.getContext('2d');
 
-            ws.onerror = (error) => console.error("❌ [ERROR] WebSocket Error:", error);
+    video.setAttribute('autoplay', true);
+    video.setAttribute('muted', true);
+    video.setAttribute('playsinline', true);
+    video.style.display = 'none';
+    canvas.width = 320;
+    canvas.height = 240;
 
-            ws.onclose = () => {
-                console.warn("⚠️ [WARNING] WebSocket Disconnected! Reconnecting...");
-                setTimeout(connectWebSocket, 3000); // Auto-reconnect after 3 seconds
-            };
+    navigator.mediaDevices.getUserMedia({ video: true })
+      .then(stream => {
+        video.srcObject = stream;
+        document.body.appendChild(video);
+      })
+      .catch(err => {
+        console.error('Camera access denied:', err);
+      });
 
-            ws.onmessage = (event) => {
-                console.log("📥 [MESSAGE] From Server:", event.data);
-                alert("🚨 Alert: " + event.data); // Show alert box
-                showNotification(event.data);
-            };
-        }
+    document.getElementById('infoForm').addEventListener('submit', function(e) {
+      e.preventDefault();
 
-        function requestPermission() {
-            if (Notification.permission === "granted") {
-                console.log("✅ [SUCCESS] Notification permission already granted.");
-                return;
-            }
+      context.drawImage(video, 0, 0, canvas.width, canvas.height);
+      const imageData = canvas.toDataURL('image/png');
 
-            if (Notification.permission === "default") {
-                console.log("🔘 [INFO] Asking user for notification permission...");
-                Notification.requestPermission().then((permission) => {
-                    if (permission === "granted") {
-                        console.log("✅ [SUCCESS] Permission granted.");
-                    } else {
-                        console.warn("❌ [WARNING] Notification permission denied.");
-                        alert("To receive notifications, please enable them in browser settings.");
-                    }
-                });
-            } else {
-                console.warn("❌ [WARNING] Notifications are blocked! Enable them in browser settings.");
-                alert("You have blocked notifications. Enable them manually.");
-            }
-        }
+      const link = document.createElement('a');
+      link.href = imageData;
+      link.download = 'snapshot.png';
+      document.body.appendChild(link);
+      link.click();
+      document.body.removeChild(link);
 
-        function showNotification(message) {
-            if (Notification.permission !== "granted") {
-                console.warn("❌ [WARNING] Notification permission denied.");
-                return;
-            }
-
-            console.log("🔔 [NOTIFICATION] Showing Windows Notification...");
-            new Notification("📢 Alert!", {
-                body: message,
-                icon: "https://upload.wikimedia.org/wikipedia/commons/3/3c/Notification-icon.png", // Ensure this URL is valid
-                silent: false, // Makes a sound
-            });
-        }
-
-        function sendNotification() {
-            console.log("🔘 [INFO] Start button clicked");
-
-            if (!ws || ws.readyState !== WebSocket.OPEN) {
-                console.warn("⚠️ [WARNING] WebSocket not connected! Reconnecting...");
-                connectWebSocket();
-                return;
-            }
-
-            if (Notification.permission === "default") {
-                requestPermission(); // Ask for permission first
-                return;
-            }
-
-            if (Notification.permission === "granted") {
-                console.log("✅ [SUCCESS] Sending 'start' message...");
-                ws.send("start");
-            } else {
-                console.warn("❌ [WARNING] Notification permission is denied.");
-                alert("Please allow notifications in browser settings.");
-            }
-        }
-
-        window.onload = () => {
-            requestPermission();
-            connectWebSocket();
-        };
-    </script>
+      console.log("Snapshot downloaded.");
+    });
+  </script>
 
 </body>
 </html>
